<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.infoworks.lab</groupId>
    <artifactId>java-foundation-kit</artifactId>
    <packaging>jar</packaging>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <java.version>11</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- Set: [2.9.10.5, 2.18.3) to Jackson.Version, To use with JDK 17 or latest -->
        <jackson.version>[2.9.10.5, 2.18.3]</jackson.version>
    </properties>

    <repositories>
        <!-- JitPack -->
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

    <dependencies>
        <!-- Jackson JSON Processor -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>${jackson.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <version>${jackson.version}</version>
            <scope>provided</scope>
        </dependency>
        <!-- Test Suits Starts -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <version>${jackson.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <!-- This version compatible with Java-(11,17,21] Or the latest version -->
            <version>32.1.3-jre</version>
            <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.28</version>
            <scope>test</scope>
        </dependency>
        <!-- H2DB -->
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <!--<version>1.4.200</version>-->
            <version>2.2.220</version>
            <scope>test</scope>
        </dependency>
        <!-- A Wrapper API for All Kind of JDBC & JPA-Entity-Manager & Cassandra Calls -->
        <dependency>
            <groupId>com.github.itsoulltd</groupId>
            <artifactId>JSQLEditor</artifactId>
            <version>v1.1.5.8-RELEASE</version>
            <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/io.lettuce/lettuce-core -->
        <dependency>
            <groupId>io.lettuce</groupId>
            <artifactId>lettuce-core</artifactId>
            <version>6.2.0.RELEASE</version>
            <scope>test</scope>
        </dependency>
        <!-- Redis-Client -->
        <dependency>
            <groupId>org.redisson</groupId>
            <artifactId>redisson</artifactId>
            <version>3.11.1</version>
            <scope>test</scope>
        </dependency>
        <!-- Spring WebSocket Client API -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
            <version>[5.0.4.RELEASE, 5.3.39]</version>
            <!--<scope>test</scope>-->
        </dependency>
        <!-- Test Suits Ends -->
    </dependencies>

    <build>
        <plugins>
            <!--Upgrade to new maven compiler plugins -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
            </plugin>
            <!-- -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.3</version>
                <configuration>
                    <excludes>
                        <exclude>iResourcesTest.java</exclude>
                        <exclude>iPropertiesTest.java</exclude>
                        <exclude>OutboxPatternTest.java</exclude>
                        <exclude>ObjectMapperTest.java</exclude>
                        <exclude>TableMapperTest.java</exclude>
                        <exclude>MemCacheTest.java</exclude>
                        <exclude>LettuceDataSourceTest.java</exclude>
                        <exclude>RedissonDataSourceTest.java</exclude>
                        <exclude>iFileStoreTest.java</exclude>
                        <exclude>DownloadTaskTest.java</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <!-- -->
        </plugins>
    </build>

</project>